[gd_scene load_steps=9 format=3 uid="uid://ckejtp1jn1ja5"]

[ext_resource type="Theme" uid="uid://588lbdpfgc1c" path="res://hud_regular_theme.tres" id="1_vdm40"]
[ext_resource type="Script" path="res://scripts/DialogueBox.gd" id="2_w8b2x"]
[ext_resource type="Texture2D" uid="uid://cegr1l52msvjp" path="res://assets/warrior.png" id="3_ywqk1"]
[ext_resource type="Texture2D" uid="uid://b3d1vbso6sfii" path="res://assets/hand_point.png" id="4_r2is7"]

[sub_resource type="Animation" id="Animation_v4e6u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/HBoxContainer/VBoxContainer/DialogueText:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/HBoxContainer/TextureRect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_uroxv"]
resource_name = "flash_cursor"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/HBoxContainer/TextureRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2voqr"]
resource_name = "show_dialogue"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/HBoxContainer/VBoxContainer/DialogueText:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4v7aw"]
_data = {
"RESET": SubResource("Animation_v4e6u"),
"flash_cursor": SubResource("Animation_uroxv"),
"show_dialogue": SubResource("Animation_2voqr")
}

[node name="DialogueBox" type="PanelContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme = ExtResource("1_vdm40")
script = ExtResource("2_w8b2x")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_vdm40")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("1_vdm40")

[node name="ActorSprite" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
texture = ExtResource("3_ywqk1")
expand_mode = 3
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ActorName" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Zavad"

[node name="DialogueText" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "This is some dialogue of the utmost importance"
visible_characters = 0
visible_ratio = 0.0

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("4_r2is7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4v7aw")
}
autoplay = "show_dialogue"
